# vector-indexer-sdk-v2

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/vector_indexer_sdk_v2/: __init__.py  client.py  config.py  retriever.py
tests/: test_retriever.py
